# generator

./: .gitignore  CMakeLists.txt  main.cpp
noiseMC/: CMakeLists.txt
signalSummator/: CMakeLists.txt  signalSummator.cpp  signalSummator.h
sineOscillator/: CMakeLists.txt  sineOscillator.cpp  sineOscillator.h
wavWriter/: CMakeLists.txt  wavWriter.cpp  wavWriter.h
