#cmake_minimum_required(VERSION 3.5)

#project(signalSummator LANGUAGES CXX)

#set(SOURCES signalSummator.cpp)
#set(HEADERS signalSummator.h)

#add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})

#target_link_libraries(${PROJECT_NAME} PUBLIC D:\\LETIproj\\friday\\generatorcpp\\generetor\\sineOscillator)
